--- a/xaomi/practicaClase.css
+++ b/xaomi/practicaClase.css
@@ -2,151 +2,153 @@
     margin: 0;
     padding: 0;
 }
-
-.izq {
+.contenedorTop{
     display: flex;
     background-color: black;
-    height: 40px;
-
-    align-content: space-between;
-    justify-content: center;
+    height: 3em;
+    justify-content: space-between;
     align-items: center;
-
+    padding: 0 4%;
+    
+   
 }
 
-.der {
-    display: flex;
-    margin-left: 400px;
-    background-color: black;
-    align-content: space-between;
-    justify-content: center;
-    align-items: center;
-
+.primerMenu ul{
+   list-style: none;
+   display: flex;
+   flex-direction: row;
+    color: aliceblue;
+}
+.primerMenu ul li{
+    margin: 0 1%;
+   
+}
+.primerMenu ul li .sinBorde{
+    border: none;
 }
 
-.elementos {
-    margin-right: 10px;
+.primerMenu a{
+    text-decoration: none;
     color: aliceblue;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border-right: 1px solid white;
+    padding-right: 1em;
+    font-size: 13px;
 }
+.primerMenu:first-child{
+    width: 70%;
+}
+.primerMenu:last-child{
+    width: 30%;
+}
+.primerMenu:first-child ul{
+    justify-content: flex-start;
+}
+.primerMenu:last-child ul{
+    justify-content: flex-end;
+}
+
 a:hover {
     color: orange;
-  }
-  
-
-.primero {
-    color: aliceblue;
-    text-decoration: none;
-}
-
-img#carro {
-    width: 30px;
-
 }
 
 img#icono {
     width: 50px;
     height: 50px;
-
+   
 }
-
-.segundoNav {
+.segundoContenedor{
     display: flex;
     background-color: #dfe3ee;
-    height: 100px;
-    justify-content: space-evenly;
     align-items: center;
-
-}
-
-.segundo {
-    color: black;
-    text-decoration: none;
-
-
-}
-
-.elementos2 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-
-}
-
-.unir {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    align-content: space-around;
+    justify-content: flex-end;
+    padding-top: 2%;
     
 }
-.fondo{
+.segundoMenu ul{
+    list-style: none;
+   display: flex;
+   flex-direction: row; 
+}
+.segundoMenu ul li{
+    margin: 0 2%;
+}
+.segundoMenu a {
+    color: black;
+    text-decoration: none;
+}
+.segundoMenu:first-child{
+    width: 10%;
+}
+.segundoMenu:last-child{
+    width: 90%;
+}
+li input{
     background-color: #dfe3ee;
     border: none;
     border-bottom: 1px solid gray;
-}
+    width: 11em;
+    
+ }
 
 img#lupa {
     width: 20px;
-   
 
 }
 
-input {
-    border-radius: 5px;
-}
-
-.cuerpo {
-    display: flex;
-    padding-top: 5%;
-    margin-left: 10%;
-    margin-right: 10%;
-}
 
 img#moviles {
-    width: 600px;
+    width: 17em;
+    height:17em ;
 }
 
 .cuerpoCompleto {
+    
     background-color: #dfe3ee;
     display: flex;
-    align-items: baseline;
-    justify-content: flex-end;
+    height: 20em;
+    padding-bottom: 2em;
     flex-direction: row;
-    align-items: stretch;
-    flex-wrap: wrap;
-
+    justify-content: center;
+    align-items: center;
+  
 
 }
-
-h1 {
+.titulo{
+    font-size: 3em;
     font-weight: bold;
-    font-size: 40px;
 }
-
-pre {
-    line-height: 15px;
-    font-size: 30px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+.subtitulo{
+    font-size: 3em;
 }
-
-.pInicial{
-    font-size: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: gray;
+.subtitulo2{
+    font-size: 2em;
+    
+}
+.precio1{
+font-size: 2em;
+font-weight: bold;
 }
 
 .precio {
-    font-size: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 1.5em;
     text-decoration: line-through;
     text-decoration-color: black;
     color: gray;
 }
 
 .boton {
-    width: 180px;
-    height: 25px;
+    
+    width: 12em;
+    height: 2em;
     background-color: #dfe3ee;
-   color: gray;
-   border: 2px solid gray;
-   cursor: pointer;
+    color: gray;
+    border: 2px solid gray;
+    cursor: pointer;
+    border-radius: 7px;
 }
 
 .contenedor {
@@ -161,12 +163,14 @@ pre {
 }
 
 img#movil {
-    width: 200px;
-    height: 150px;
+    width: 11em;
+    height: 9em;
 }
-.item-parafo{
-font-family:Arial, Helvetica, sans-serif;
-font-size: 15px;
+
+.item-parafo {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    color: grey;
 
 }
 
@@ -174,82 +178,55 @@ font-size: 15px;
     background-color: #f0e6e4;
     width: 30%;
     text-align: center;
+    padding-top: 1em;
 
 }
+
 
 .item2 {
     text-align: center;
     background-color: #dcdfe4;
     width: 30%;
+    padding-top: 1em;
 }
 
 .item3 {
     text-align: center;
     background-color: #f0e6e4;
     width: 30%;
+    padding-top: 1em;
 }
-.ultimaParte{
-    
+
+.ultimaParte {
     background-color: #56a48e;
-    height: 120px;
-    width: 76%;
-    margin-left: 12%;
+    height: 7em;
+    width: 65.6em;
+    margin-left: 10.4em;
     margin-top: 1%;
     color: aliceblue;
-
-   
-   
-}
-
-.final {
     display: flex;
-    align-content: space-between;
+    flex-direction: row;
+    align-items: center;
     justify-content: flex-start;
+
 }
 
 img#escudo {
-    width: 170px;
-    height: 120px;
+    width: 10em;
+    height: 8em;
 }
-
-.letras {
-   
-    margin-left: 6%;
-    display: flex;
-
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.fecha {
-    line-height: 0.1;
-    white-space: pre;
-    font-size: 15px;
-    font-family:Arial, Helvetica, sans-serif;
-}
-
-.letra {
+.ultimaParte span{
     font-weight: bold;
-    font-family:Arial, Helvetica, sans-serif;
-    line-height: 0.1;
-    white-space: pre;
-   
+    font-size: 1.5em;
 }
 
-.letraFina {
-    font-family:Arial, Helvetica, sans-serif;
-    line-height: 0.1;
-    white-space: pre;
-   
-}
+
 
 .botonFinal {
-    margin-left: 30%;
+    
     display: flex;
-    margin-top: 10%;
-    width: 280px;
-    height: 60px;
+    width: 15em;
+    height: 3em;
     background-color: #56a48e;
     align-content: space-around;
     justify-content: center;
@@ -257,11 +234,14 @@ img#escudo {
     border: 2px solid aliceblue;
     font-weight: bold;
     cursor: pointer;
+    margin-left: 6em;
 }
-.botonFinal:hover{
+
+.botonFinal:hover {
     background-color: black;
-   
+
 }
-.boton:hover{
+
+.boton:hover {
     background-color: black;
 }
