--- a/pagina/pagina.css
+++ b/pagina/pagina.css
@@ -184,8 +184,9 @@ h1 {
 .posicion {
   margin: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 .contenedorFotos {
   display: grid;
@@ -202,26 +203,49 @@ h1 {
 }
 .fotos img {
   width: 100%;
-  height: auto;
+  height: 400px;
   object-fit: cover;
 }
 
 .botonesFotos {
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
   bottom: 0;
   display: flex;
-  padding: 20px;
   color: #fff;
   flex-direction: row;
-  align-items: flex-end;
+  margin-right: 5px;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 20px;
+  height: 3.5em;
+  margin-left: 5px;
+  width: 21em;
+  align-items: stretch;
 }
-.botonF {
-}
+
 .nombre {
-  justify-content: space-evenly;
-  align-items: baseline;
-  flex-direction: column-reverse;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  align-content: stretch;
+}
+
+.nombre button {
+  width: 6em;
+  font-size: 14px;
+  margin-right: 15px;
+  margin-bottom: 4px;
+}
+
+.lugar {
+  display: flex;
+  margin-left: 1em;
+  font-size: 17px;
+  padding-right: 3em;
+  line-height: 0%;
+  align-content: stretch;
+  justify-content: flex-start;
+  align-items: center;
+  width: 5em;
 }
