ultimos cambios apple

--- a/apple/apple.css
+++ b/apple/apple.css
@@ -78,6 +78,6 @@ margin: 0%;
 }
 .pre1{
      margin-top: 1em;
-
-  font-family: 'Times New Roman', Times, serif;
+  width: 25em;
+  text-align: center;
 }
